# engineering

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
engineering/: app.py  config.py  dependencies.py  routes.py  run.py
engineering/api/: Job.py  app.py  dependencies.py  predict.py  routes.py  schemas.py
engineering/worker/: app.py  rate.py  tasks.py  worker.py
tests/: __init__.py  conftest.py  mocks.py  test_examples.py  test_full_case.py  test_predict.py  test_retrieve.py  utils.py
