[tool.poetry]
name = "engineering"
version = "0.0.1"
description = "Simple API with ML model and background tasks"
authors = [
    "Artem <artctvcode@gmail.com>",
    "Alina <kalimullina.alina2009@yandex.ru>",
    "Elena <kukarceva_elena@mail.ru>",
    "Elvina <Kalimullina.elvina2016@yandex.ru>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.15"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
redis = "^4.4.0"
python-dotenv = "^0.21.0"
python-multipart = "^0.0.5"
rq = "^1.11.1"
typer = "^0.7.0"
transformers = "^4.25.1"
tensorflow = "^2.11.0"
pillow = "^9.3.0"
torch = "^1.13.1"
fakeredis = "^2.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-s"
testpaths = [
    "engineering/tests"
]